--- a/webdoc/style.css
+++ b/webdoc/style.css
@@ -2,55 +2,28 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 
-    'Lucida Grande', 
-        'Lucida Sans', Arial, sans-serif
-}
-/*
-nav {
-    height: 65px;
-    background: #3a115c;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0rem calc((100vw - 1300px) / 2);
-}
+    font-family: 'Roboto', sans-serif;
+  }
 
-nav a:hover {
-    color: #d7db6f;
-}
-
-.logo {
-    color: #ffffff;
-    font-size: 1.5rem;
-    font-weight: bold;
-    font-style: italic;
-    padding: 0 2rem;
-}
-
-nav a {
-    text-decoration: none;
-    color: #ffffff;
-    padding: 0 1.5rem;
-}
-*/
-
-.hero {
-    background: #ae95c1;
+  
+  .hero {
+    background: transparent;
     padding: 30px;
     position: relative;
     overflow: hidden;
-}
-
-.hero-container {
+    z-index: 1;
+  }
+  
+  .hero-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
     height: 50vh;
     padding: 3rem calc((100vw - 1300px) / 2);
-}
-
-.typingHead {
-    font-size: 1.5rem;
+    z-index: 2;
+  }
+  
+  .typingHead {
+    font-size: 2rem;
     font-weight: bold;
     font-family: monospace;
     border-right: 3px solid rgb(255, 255, 255);
@@ -58,116 +31,107 @@ nav a {
     overflow: hidden;
     width: 0;
     line-height: 0.8;
-    animation: typing 2s steps(30, end) forwards, blink 0.6s infinite;
-}
-
-@keyframes typing {
+    animation: typing 2s steps(21, end) forwards, blink 0.6s infinite;
+  }
+  
+  @keyframes typing {
     from { width: 0; }
     to { width: 51%; }
-}
-
-@keyframes blink {
+  }
+  
+  @keyframes blink {
     50% { border-color: transparent; }
-}
+  }
 
-.circle {
-    position: absolute;
-    width: 1000px;
-    height: 1000px;
-    background: rgba(255, 255, 255, 0.2);
-    border-radius: 50%;
-    top: 40%;
-    left: 20%;
-    transform: translate(-50%, -50%);
-    z-index: 0;
-}
-
-.button-container {
+  .button-container {
     display: flex;
     flex-direction: column;
-    align-items: left; 
+    align-items: flex-start;
     gap: 1rem;
     z-index: 1;
-}
-
-button {
-    width: 185px;
+  }
+  
+  button {
+    min-width: 185px;
     font-size: 1rem;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
     text-align: center;
+    padding: 1rem 3rem;
+    border: 2px solid #303030;
+    color: #1e1e1e;
+    background: linear-gradient(to right, #fff6e8, #fffbee);
+    cursor: pointer;
+    border-radius: 40px;
     z-index: 1;
+    transition: all 0.2s ease-in-out;
+    box-shadow: 0px 4px 6px rgba(26, 26, 26, 0.1);
 }
 
-.column-left h1 {
+button:hover {
+    background: #f1e5c8;
+    color: #292929;
+    border-color: #2d2d2d;
+    box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
+    transform: scale(1.02);
+}
+
+  
+  .column-left h1 {
     margin-bottom: 1rem;
     font-size: 2rem;
     z-index: 1;
-}
-
-.column-left p {
+  }
+  
+  .column-left p {
     margin-bottom: 2rem;
     font-size: 1.5rem;
     line-height: 1.5;
     z-index: 1;
-}
-
-button {
-    padding: 1rem 3rem;
-    font-size: 1rem;
-    border: none;
-    color: #ffffff;
-    background: #000000;
-    cursor: pointer;
-    border-radius: 40px;
-}
-
-button:hover {
-    background: #fff;
-    color: #000;
-}
-
-.column-right {
+  }
+  
+  .column-right {
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 0rem 2rem;
-}
-
-.hero-image {
+  }
+  
+  .hero-image {
     width: 100%;
     height: 100%;
-}
-
-
-.about {
-    background: #969696;
+  }
+  
+  .about {
+    background: #fff6e8;
     padding: 30px;
-    color: white;
-}
-
-.about-container {
+    color: rgb(54, 54, 54);
+  }
+  
+  .about-container {
     display: flex;
-    flex-direction: column; 
-    align-items: center; 
-    text-align: center; 
-    height: 45vh;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    height: 36vh;
     padding: 2rem calc((100vw - 1300px) / 2);
-}
-
-.about-header {
-    font-size: 23px;
+  }
+  
+  .about-header {
+    font-size: 13px;
     font-weight: bold;
     margin-bottom: 1rem;
-}
-
-.about-container p {
-    font-size: 25px;
-    max-width: 700px; 
+  }
+  
+  .about-container p {
+    font-size: 22px;
+    max-width: 665px;
     line-height: 1.5;
-}
-
-
-@media screen and (max-width: 500px) {
+  }
+  
+  @media screen and (max-width: 500px) {
     .hero-container {
-        grid-template-columns: 1fr;
+      grid-template-columns: 1fr;
     }
-}
+  }
+  
