--- a/webdoc/style.css
+++ b/webdoc/style.css
@@ -12,12 +12,23 @@
     position: relative;
     overflow: hidden;
     z-index: 1;
+    height: 500px;
   }
+
+  .hero canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+  }
+  
   
   .hero-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    height: 50vh;
+    height: 3vh;
     padding: 3rem calc((100vw - 1300px) / 2);
     z-index: 2;
   }
@@ -95,6 +106,13 @@ button:hover {
     justify-content: center;
     align-items: center;
     padding: 0rem 2rem;
+  }
+
+  .visual-container {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    height: 500px; /* Adjust height as desired */
   }
   
   .hero-image {
